# health-care

./: .env.example  .env.production.example  .env.staging.example  .eslintrc.json  .gitignore  .prettierignore  AUDIT_TRAIL_README.md  AUTOMATED_CLAIM_PROCESSING_SUMMARY.md  CLOSE_PR_DESCRIPTION.md  CONFLICT_RESOLUTION_SUMMARY.md  CONTRIBUTING.md  CREATE_PR_INSTRUCTIONS.md  Cargo.toml  Dockerfile  EMERGENCY_ACCESS_README.md  ENHANCED_CONTRIBUTOR_VERIFICATION.md  ENHANCED_PR_DESCRIPTION.md  ENHANCED_PR_INSTRUCTIONS.md  FINAL_IMPLEMENTATION_SUMMARY.md  FRAUD_DETECTION_DOCUMENTATION.md  HL7_FHIR_INTEGRATION_PR_DESCRIPTION.md  HL7_FHIR_INTEGRATION_README.md  HL7_FHIR_SETUP_GUIDE.md  MFA_IMPLEMENTATION_SUMMARY.md  MFA_PR_DESCRIPTION.md  MULTI_TOKEN_PREMIUM_SUPPORT.md  PR_ADVANCED_SEARCH.md  PR_DESCRIPTION.md  PR_DESCRIPTION_HL7_FHIR.md  PR_PROVIDER_DIRECTORY.md  PR_RATE_LIMITING_IMPLEMENTATION.md  PULL_REQUEST_DESCRIPTION.md  README-MULTI-TOKEN.md  README-PRIMARY.md  README-STELLAR.md  README.md  SMART_CONTRACT_UPGRADE_GUIDE.md  UPGRADE_MECHANISM_PR_DESCRIPTION.md  UPGRADE_MECHANISM_README.md  docker-compose.prod.yml  (+5 more)
.github/: pull_request_template.md
backend/: .env.analytics  .env.example  .env.notification.example  ANALYTICS_README.md  Dockerfile.prod  IPFS-INTEGRATION-README.md  MFA_IMPLEMENTATION.md  README_PROVIDER_DIRECTORY.md  package-lock.json  package.json  server.js  tsconfig.json
docs/: API_RATE_LIMITING.md  AUTOMATED_CLAIM_PROCESSING.md  CONNECTION_TROUBLESHOOTING.md  CONTRIBUTOR-GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  ISSUES_AND_ACCEPTANCE_CRITERIA.md  (+5 more)
(+329 files in other folders)
